Changes in optimx 

Changes before 2012-4-30 not recorded 

TODOS
   o    Entire code needs to be checked for vestiges of earlier
	changes and diagnostic output, as well as being better
	formatted.

2012-5-18
   o	The structure for passing information into and out of ufn, 
	ugr and uhess has been updated to allow for matrix arguments.
	This has been tested and appears to work, but the full set
	of tests still needs to be suitably tidied and documented,
	then shortened to put in the Examples. 

   o    Axial search has been tested but suitable examples need to 
	be tidied. NOTE: axsearch ONLY uses minimization. 

   o    get.best adjusted as min(fs*fv) failed.
        This prompted addition of as.numeric() to all function values
	returned.

	   
2012-5-6
   o	Changed to use new structure opxfn which is an environment
	created with list2env. This environment allows the passing
	of scaling information as well as recording of function,
	gradient and hessian counts. Note that the structure may
	be extended later, and that it also affects package
	optfntools.

   o	Control axsearch.tries = 0 should suppress axial search.

